[JSC] `Intl.DurationFormat` should not print separator for hour unit when it isn't printed https://bugs.webkit.org/show_bug.cgi?id=285078

Reviewed by Yusuke Suzuki.

When the `hourDisplay` option is `auto` and `hours` is 0,
the hours value is not printed. Therefore, the separator
that follows the hours should also not be printed.

However, in our current implementation, only the separator
is printed in that situation:

```js
// current behavior
const df = new Intl.DurationFormat('en-US', {
  style: "digital",
  hoursDisplay: "auto",
});
df.format({hours: 0, minutes: 1, seconds: 2}); // ":, 01:02"
```

This patch fixes that issue.

* JSTests/stress/intl-durationformat-hourdisplay-auto.js: Added.
(shouldBe):
* Source/JavaScriptCore/runtime/IntlDurationFormat.cpp:
(JSC::collectElements):

Canonical link: https://commits.webkit.org/288277@main